<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.banhangonline.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.banhangonline.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.banhangonline.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.banhangonline.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offer" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.banhangonline.NewProductsFragment"
        android:label="@string/new_products"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.banhangonline.MyOdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_oders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.banhangonline.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />
    <fragment
        android:id="@+id/nav_my_password"
        android:name="com.example.banhangonline.ChangePassFragment"
        android:label="@string/my_password"
        tools:layout="@layout/fragment_my_carts" />

</navigation>